Fix z-index visibility of buttons

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,6 +18,7 @@ ion-content {
   margin-top: 10px;
   margin-bottom: 0px;
   height: 324px;
+  z-index: 999;
 }
 
 .subDetails {
@@ -30,7 +31,7 @@ ion-content {
 
 .buttons {
   margin-top: 6px;
-  position: fixed;
+  position: relative;
   top: 334px;
 }
 
@@ -39,6 +40,7 @@ ion-content {
   border: solid 2px;
   width: 100%;
   background-color: #fff;
+  z-index: -10;
 }
 
 button.button.ignore {
